tests/ui/deref_forbidden.jet
fn main() {
    val x: Int = 1;
    print(*x);
}
